[project]
name = "fastapi-microservices-library"
version = "0.1.0b1"
description = "FastAPI Microservices Library"
readme = "README.md"
authors = [
    { name = "rio-not-real", email = "riolin98@gmail.com" }
]
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.0",
    "orjson>=3.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[build-system]
requires = [
    "uv_build>=0.9.18,<0.10.0"
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fml"

[tool.pytest]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra", "-vv"]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = [
    "FAST",
    "I",
]
